--- a/index.html
+++ b/index.html
@@ -3,9 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CAPSTONE_PROJECT</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>rishiwant</h1>
+    <header>
+        <div class="navbar">
+            <div class="nav-left">
+                <a href="#" class="nav-item">Home</a>
+                <a href="#" class="nav-item">Projects</a>
+                <a href="#" class="nav-item">About</a>
+            </div>
+            <div class="brand">
+                <span class="logo">
+                    DataViz
+                </span>
+            </div>
+            <div class="contact">
+                <a href="#" class="contact-link">Contact</a>
+            </div>
+        </div>
+    </header>
+    <div class="heading-container">
+        <span class="heading">Explore My Data</span>
+        <div class="main-image">
+            <img src="big.jpg" alt="Landing Image" class="image-main">
+        </div>
+    </div>
+    <div class="image-container">
+        <div class="image-item">
+            <img src="projectalpha.jpg" alt="Project Alpha">
+            <span class="project-name">Project Alpha</span>
+            <span class="project-subtitle">Data Analysis</span>
+        </div>
+        <div class="image-item">
+            <img src="projectbeta.png" alt="Project Beta">
+            <span class="project-name">Project Beta</span>
+            <span class="project-subtitle">Visualization</span>
+        </div>
+        <div class="image-item">
+            <img src="projectgamma.png" alt="Project Gamma">
+            <span class="project-name">Project Gamma</span>
+            <span class="project-subtitle">AI Integeration</span>
+        </div>
+        <div class="image-item">
+            <img src="projectdelta.png" alt="Project Delta">
+            <span class="project-name">Project Delta</span>
+            <span class="project-subtitle">Machine Learning</span>
+        </div>
+        <div class="image-item">
+            <img src="projectepsi.png" alt="Project Epsilon">
+            <span class="project-name">Project Epsilon</span>
+            <span class="project-subtitle">Big Data</span>
+        </div>
+        <div class="image-item">
+            <img src="projectzeta.png" alt="Project Zeta">
+            <span class="project-name">Project Zeta</span>
+            <span class="project-subtitle">Predictive Analysis</span>
+        </div>
+        <div class="image-item">
+            <img src="eta.jpg" alt="Project Eta">
+            <span class="project-name">Project Eta</span>
+            <span class="project-subtitle">Data Mining</span>
+        </div>
+        <div class="image-item">
+            <img src="projectbtheta.jpg" alt="Project Theta">
+            <span class="project-name">Project Theta</span>
+            <span class="project-subtitle">Data Engineering</span>
+        </div>
+        <div class="image-item">
+            <img src="projectiota.png" alt="Project Iota">
+            <span class="project-name">Project Iota</span>
+            <span class="project-subtitle">Data Visualization</span>
+        </div>
+    </div>
 </body>
 </html>
