--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
             <span class="project-subtitle">Data Mining</span>
         </div>
         <div class="image-item">
-            <img src="projectbtheta.jpg" alt="Project Theta">
+            <img src="theta.jpg" alt="Project Theta">
             <span class="project-name">Project Theta</span>
             <span class="project-subtitle">Data Engineering</span>
         </div>
         <div class="image-item">
-            <img src="projectiota.png" alt="Project Iota">
+            <img src="iota.png" alt="Project Iota">
             <span class="project-name">Project Iota</span>
             <span class="project-subtitle">Data Visualization</span>
         </div>
