Sixth Commit: Due Mobile Screen Responsiveness the impact grid is distorted so i have to change the whole code.........

--- a/index.html
+++ b/index.html
@@ -1,81 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CAPSTONE_PROJECT</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <div class="navbar">
-            <div class="nav-left">
-                <a href="#" class="nav-item">Home</a>
-                <a href="#" class="nav-item">Projects</a>
-                <a href="#" class="nav-item">About</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Gothic+A1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=BIZ+UDPMincho&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abyssinica+SIL&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+  </head>
+
+  <body>
+    <!-- for the navbar -->
+
+    <nav class="navbar">
+        <div class="nav-content">
+            <div class="page-links">
+                <a href="#">
+                <h1>Home</h1>
+                </a>
+                <a href="#">
+                <h1>Project</h1>
+                </a>
+                <a href="#">
+                <h1>About</h1>
+                </a>
             </div>
-            <div class="brand">
-                <span class="logo">
-                    DataViz
-                </span>
+
+
+            <div class="logo">
+                <a href="#">
+                <h1>DataViz</h1>
+                </a>
             </div>
-            <div class="contact">
-                <a href="#" class="contact-link">Contact</a>
+
+
+            <div class="conctact-nav">
+                <a href="#">
+                    <h1>Contact</h1>
+                </a>
             </div>
         </div>
-    </header>
-    <div class="heading-container">
-        <span class="heading">Explore My Data</span>
-        <div class="main-image">
-            <img src="big.jpg" alt="Landing Image" class="image-main">
+
+    </nav>
+
+    <!-- for the main page -->
+
+    <div class="landing-page">
+        <div class="heading">
+          <h1>Explore My Data</h1>
         </div>
+        <img src="big.jpg" alt="wood image" />
     </div>
-    <div class="image-container">
-        <div class="image-item">
-            <img src="projectalpha.jpg" alt="Project Alpha">
-            <span class="project-name">Project Alpha</span>
-            <span class="project-subtitle">Data Analysis</span>
+
+      <!-- for the collage part -->
+      <div class="collage">
+        <div class="collage-img">
+          <img src="projectalpha.jpg" alt="" />
+          <div class="text-content">
+            <p class="title">Modern Living Room</p>
+            <p class="subtitle">Interior Design</p>
+          </div>
         </div>
-        <div class="image-item">
-            <img src="projectbeta.png" alt="Project Beta">
-            <span class="project-name">Project Beta</span>
-            <span class="project-subtitle">Visualization</span>
+        <div class="collage-img">
+          <img src="projectbeta.png" alt="" />
+          <div class="text-content">
+            <p class="title">Modern Living Room</p>
+            <p class="subtitle">Interior Design</p>
+          </div>
         </div>
-        <div class="image-item">
-            <img src="projectgamma.png" alt="Project Gamma">
-            <span class="project-name">Project Gamma</span>
-            <span class="project-subtitle">AI Integeration</span>
+        <div class="collage-img">
+          <img src="projectgamma.png" alt="" />
+          <div class="text-content">
+            <p class="title">Modern Living Room</p>
+            <p class="subtitle">Interior Design</p>
+          </div>
         </div>
-        <div class="image-item">
-            <img src="projectdelta.png" alt="Project Delta">
-            <span class="project-name">Project Delta</span>
-            <span class="project-subtitle">Machine Learning</span>
+
+        <div class="collage-img">
+          <img src="projectdelta.png" alt="" />
+          <div class="text-content">
+            <p class="title">Modern Living Room</p>
+            <p class="subtitle">Interior Design</p>
+          </div>
         </div>
-        <div class="image-item">
-            <img src="projectepsi.png" alt="Project Epsilon">
-            <span class="project-name">Project Epsilon</span>
-            <span class="project-subtitle">Big Data</span>
+        <div class="collage-img">
+          <img src="projectepsi.png" alt="" />
+          <div class="text-content">
+            <p class="title">Modern Living Room</p>
+            <p class="subtitle">Interior Design</p>
+          </div>
         </div>
-        <div class="image-item">
-            <img src="projectzeta.png" alt="Project Zeta">
-            <span class="project-name">Project Zeta</span>
-            <span class="project-subtitle">Predictive Analysis</span>
+        <div class="collage-img">
+          <img src="projectzeta.png" alt="" />
+          <div class="text-content">
+            <p class="title">Modern Living Room</p>
+            <p class="subtitle">Interior Design</p>
+          </div>
         </div>
-        <div class="image-item">
-            <img src="eta.jpg" alt="Project Eta">
-            <span class="project-name">Project Eta</span>
-            <span class="project-subtitle">Data Mining</span>
+
+        <div class="collage-img">
+          <img src="eta.jpg" alt="" />
+          <div class="text-content">
+            <p class="title">Modern Living Room</p>
+            <p class="subtitle">Interior Design</p>
+          </div>
         </div>
-        <div class="image-item">
-            <img src="theta.jpg" alt="Project Theta">
-            <span class="project-name">Project Theta</span>
-            <span class="project-subtitle">Data Engineering</span>
+        <div class="collage-img">
+          <img src="theta.jpg" alt="" />
+          <div class="text-content">
+            <p class="title">Modern Living Room</p>
+            <p class="subtitle">Interior Design</p>
+          </div>
         </div>
-        <div class="image-item">
-            <img src="iota.png" alt="Project Iota">
-            <span class="project-name">Project Iota</span>
-            <span class="project-subtitle">Data Visualization</span>
+        <div class="collage-img">
+          <img src="iota.png" alt="" />
+          <div class="text-content">
+            <p class="title">Modern Living Room</p>
+            <p class="subtitle">Interior Design</p>
+          </div>
         </div>
+      </div>
+
+
+
+
+
+      <div class="impact-container">
+        <div class="impact">
+            <span class="our">Our Impact</span>
+        </div>
+        <div class="impact-data">
+            <div class="data">
+                <span class="numbers">1M+</span>
+                <span class="datatitle">Data Points Analyzed</sp>
+            </div>
+            <div class="data">
+                <span class="numbers">500+</span>
+                <span class="datatitle">Projects Completed</span>
+            </div>
+            <div class="data">
+                <span class="numbers">200+</span>
+                <span class="datatitle">Clients Served</span>
+            </div>
+            <div class="data">
+                <span class="numbers">100+</span>
+                <span class="datatitle">Awards Won</span>
+            </div>
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+      <!-- for the about section part -->
+
+      <div class="about">
+        <p>
+            I am a data scientist with a passion for uncovering insights through advanced data visualization techniques. My projects span multiple industries, providing actionable intelligence and innovative solutions.
+        </p>
+      </div>
     </div>
-</body>
+
+    <!-- for the footer section part -->
+    <footer class="footer-section">
+      <div class="footer-left">
+        <p>2023 DataViz</p>
+      </div>
+      <div class="footer-right">
+        <button class="contact-button">Contact Me</button>
+      </div>
+    </footer>
+  </body>
 </html>
