making folder structure more efficient and apealing by making a new folder img and adding all image to this folder and changing the path in html

--- a/index.html
+++ b/index.html
@@ -51,49 +51,27 @@
         <div class="heading">
           <h1>Explore My Data</h1>
         </div>
-        <img src="big.jpg" alt="wood image" />
+        <img src="img/big.jpg" alt="wood image" />
     </div>
 
       <!-- for the collage part -->
       <div class="collage">
         <div class="collage-img">
-          <img src="projectalpha.jpg" alt="" />
+          <img src="img/projectalpha.jpg" alt="" />
           <div class="text-content">
             <p class="title">Modern Living Room</p>
             <p class="subtitle">Interior Design</p>
           </div>
         </div>
         <div class="collage-img">
-          <img src="projectbeta.png" alt="" />
+          <img src="img/projectbeta.png" alt="" />
           <div class="text-content">
             <p class="title">Modern Living Room</p>
             <p class="subtitle">Interior Design</p>
           </div>
         </div>
         <div class="collage-img">
-          <img src="projectgamma.png" alt="" />
-          <div class="text-content">
-            <p class="title">Modern Living Room</p>
-            <p class="subtitle">Interior Design</p>
-          </div>
-        </div>
-
-        <div class="collage-img">
-          <img src="projectdelta.png" alt="" />
-          <div class="text-content">
-            <p class="title">Modern Living Room</p>
-            <p class="subtitle">Interior Design</p>
-          </div>
-        </div>
-        <div class="collage-img">
-          <img src="projectepsi.png" alt="" />
-          <div class="text-content">
-            <p class="title">Modern Living Room</p>
-            <p class="subtitle">Interior Design</p>
-          </div>
-        </div>
-        <div class="collage-img">
-          <img src="projectzeta.png" alt="" />
+          <img src="img/projectgamma.png" alt="" />
           <div class="text-content">
             <p class="title">Modern Living Room</p>
             <p class="subtitle">Interior Design</p>
@@ -101,21 +79,43 @@
         </div>
 
         <div class="collage-img">
-          <img src="eta.jpg" alt="" />
+          <img src="img/projectdelta.png" alt="" />
           <div class="text-content">
             <p class="title">Modern Living Room</p>
             <p class="subtitle">Interior Design</p>
           </div>
         </div>
         <div class="collage-img">
-          <img src="theta.jpg" alt="" />
+          <img src="img/projectepsi.png" alt="" />
           <div class="text-content">
             <p class="title">Modern Living Room</p>
             <p class="subtitle">Interior Design</p>
           </div>
         </div>
         <div class="collage-img">
-          <img src="iota.png" alt="" />
+          <img src="img/projectzeta.png" alt="" />
+          <div class="text-content">
+            <p class="title">Modern Living Room</p>
+            <p class="subtitle">Interior Design</p>
+          </div>
+        </div>
+
+        <div class="collage-img">
+          <img src="img/eta.jpg" alt="" />
+          <div class="text-content">
+            <p class="title">Modern Living Room</p>
+            <p class="subtitle">Interior Design</p>
+          </div>
+        </div>
+        <div class="collage-img">
+          <img src="img/theta.jpg" alt="" />
+          <div class="text-content">
+            <p class="title">Modern Living Room</p>
+            <p class="subtitle">Interior Design</p>
+          </div>
+        </div>
+        <div class="collage-img">
+          <img src="img/iota.png" alt="" />
           <div class="text-content">
             <p class="title">Modern Living Room</p>
             <p class="subtitle">Interior Design</p>
