--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
 
 
-            <div class="conctact-nav">
+            <div class="contact-nav">
                 <a href="#">
                     <h1>Contact</h1>
                 </a>
@@ -51,49 +51,27 @@
         <div class="heading">
           <h1>Explore My Data</h1>
         </div>
-        <img src="img/big.jpg" alt="wood image" />
+        <img src="img/big.png" alt="wood image" />
     </div>
 
       <!-- for the collage part -->
       <div class="collage">
         <div class="collage-img">
-          <img src="img/projectalpha.jpg" alt="" />
+          <img src="img/alpha.png" alt="" />
           <div class="text-content">
             <p class="title">Modern Living Room</p>
             <p class="subtitle">Interior Design</p>
           </div>
         </div>
         <div class="collage-img">
-          <img src="img/projectbeta.png" alt="" />
+          <img src="img/beta.png" alt="" />
           <div class="text-content">
             <p class="title">Modern Living Room</p>
             <p class="subtitle">Interior Design</p>
           </div>
         </div>
         <div class="collage-img">
-          <img src="img/projectgamma.png" alt="" />
-          <div class="text-content">
-            <p class="title">Modern Living Room</p>
-            <p class="subtitle">Interior Design</p>
-          </div>
-        </div>
-
-        <div class="collage-img">
-          <img src="img/projectdelta.png" alt="" />
-          <div class="text-content">
-            <p class="title">Modern Living Room</p>
-            <p class="subtitle">Interior Design</p>
-          </div>
-        </div>
-        <div class="collage-img">
-          <img src="img/projectepsi.png" alt="" />
-          <div class="text-content">
-            <p class="title">Modern Living Room</p>
-            <p class="subtitle">Interior Design</p>
-          </div>
-        </div>
-        <div class="collage-img">
-          <img src="img/projectzeta.png" alt="" />
+          <img src="img/gamma.png" alt="" />
           <div class="text-content">
             <p class="title">Modern Living Room</p>
             <p class="subtitle">Interior Design</p>
@@ -101,14 +79,36 @@
         </div>
 
         <div class="collage-img">
-          <img src="img/eta.jpg" alt="" />
+          <img src="img/delta.png" alt="" />
           <div class="text-content">
             <p class="title">Modern Living Room</p>
             <p class="subtitle">Interior Design</p>
           </div>
         </div>
         <div class="collage-img">
-          <img src="img/theta.jpg" alt="" />
+          <img src="img/epsi.png" alt="" />
+          <div class="text-content">
+            <p class="title">Modern Living Room</p>
+            <p class="subtitle">Interior Design</p>
+          </div>
+        </div>
+        <div class="collage-img">
+          <img src="img/zeta.png" alt="" />
+          <div class="text-content">
+            <p class="title">Modern Living Room</p>
+            <p class="subtitle">Interior Design</p>
+          </div>
+        </div>
+
+        <div class="collage-img">
+          <img src="img/eta.png" alt="" />
+          <div class="text-content">
+            <p class="title">Modern Living Room</p>
+            <p class="subtitle">Interior Design</p>
+          </div>
+        </div>
+        <div class="collage-img">
+          <img src="img/theta.png" alt="" />
           <div class="text-content">
             <p class="title">Modern Living Room</p>
             <p class="subtitle">Interior Design</p>
