adding some minor changes

--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
 
 
             <div class="logo">
-                <a href="#">
                 <h1>DataViz</h1>
-                </a>
             </div>
 
 
@@ -59,66 +57,66 @@
         <div class="collage-img">
           <img src="img/alpha.png" alt="" />
           <div class="text-content">
-            <p class="title">Modern Living Room</p>
-            <p class="subtitle">Interior Design</p>
+            <p class="title">Project Alpha</p>
+            <p class="subtitle">Data Analysis</p>
           </div>
         </div>
         <div class="collage-img">
           <img src="img/beta.png" alt="" />
           <div class="text-content">
-            <p class="title">Modern Living Room</p>
-            <p class="subtitle">Interior Design</p>
+            <p class="title">Project Beta</p>
+            <p class="subtitle">Visualization</p>
           </div>
         </div>
         <div class="collage-img">
           <img src="img/gamma.png" alt="" />
           <div class="text-content">
-            <p class="title">Modern Living Room</p>
-            <p class="subtitle">Interior Design</p>
+            <p class="title">Project Gamma</p>
+            <p class="subtitle">AI Generation</p>
           </div>
         </div>
 
         <div class="collage-img">
           <img src="img/delta.png" alt="" />
           <div class="text-content">
-            <p class="title">Modern Living Room</p>
-            <p class="subtitle">Interior Design</p>
+            <p class="title">Project Delta</p>
+            <p class="subtitle">Machine Learning</p>
           </div>
         </div>
         <div class="collage-img">
           <img src="img/epsi.png" alt="" />
           <div class="text-content">
-            <p class="title">Modern Living Room</p>
-            <p class="subtitle">Interior Design</p>
+            <p class="title">Project Epsilon</p>
+            <p class="subtitle">Big Data</p>
           </div>
         </div>
         <div class="collage-img">
           <img src="img/zeta.png" alt="" />
           <div class="text-content">
-            <p class="title">Modern Living Room</p>
-            <p class="subtitle">Interior Design</p>
+            <p class="title">Project Zeta</p>
+            <p class="subtitle">Predective Analysis</p>
           </div>
         </div>
 
         <div class="collage-img">
           <img src="img/eta.png" alt="" />
           <div class="text-content">
-            <p class="title">Modern Living Room</p>
-            <p class="subtitle">Interior Design</p>
+            <p class="title">Project Eta</p>
+            <p class="subtitle">Data Mining</p>
           </div>
         </div>
         <div class="collage-img">
           <img src="img/theta.png" alt="" />
           <div class="text-content">
-            <p class="title">Modern Living Room</p>
-            <p class="subtitle">Interior Design</p>
+            <p class="title">Project Theta</p>
+            <p class="subtitle">Data Engineering</p>
           </div>
         </div>
         <div class="collage-img">
           <img src="img/iota.png" alt="" />
           <div class="text-content">
-            <p class="title">Modern Living Room</p>
-            <p class="subtitle">Interior Design</p>
+            <p class="title">Project Iota</p>
+            <p class="subtitle">Data Visualization</p>
           </div>
         </div>
       </div>
@@ -151,7 +149,7 @@
         </div>
       </div>
 
-
+    
 
 
 
